fix bug build
Adding Index Page and controller. closes #8.